# 22_airbnb_backend

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_remove_chattingroom_user_chattingroom_users_and_more.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_avatar.py  (+1 more)
wishlists/: models.py
(+2 files in other folders)
