[tool.poetry]
name = "22-airbnb-b"
version = "0.1.0"
description = ""
authors = ["Heo-JunHyeok <junhyeok_1996@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "22_airbnb_b"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
